--- a/soluction/pom.xml
+++ b/soluction/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>domain</module>
         <module>business</module>
+        <module>applications</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
