--- a/soluction/applications/generic/pom.xml
+++ b/soluction/applications/generic/pom.xml
@@ -3,34 +3,20 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>cardgame</artifactId>
+        <artifactId>applications</artifactId>
         <groupId>org.example.cardgame</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>applications</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>app-command</module>
-        <module>app-queries</module>
-        <module>app-proxy</module>
-        <module>generic</module>
-    </modules>
+    <artifactId>generic</artifactId>
 
     <dependencies>
-
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
         <dependency>
-            <groupId>org.example.cardgame</groupId>
-            <artifactId>business</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.example.cardgame</groupId>
-            <artifactId>domain</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>compile</scope>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10</version>
         </dependency>
     </dependencies>
 
